# SFTPServer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  sftpserver.c
cmake/Modules/: FindLibSSH.cmake
